dqpoc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dqpoc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dqpoc
  template:
    metadata:
      labels:
        app: dqpoc
    spec:
      containers:
      - name: dqpoc
        image: nitinsuvagia/qdpoc:3.2.0
        imagePullPolicy: IfNotPresent
        command: ["tail", "-f", "/dev/null"] # > tail -f /dev/null
        #command: ["main.bat"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dqpoc-service
spec:
  selector:
    app: dqpoc
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dqpoc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - quantumdatalytica.com
    secretName: myapp-tls
  rules:
  - host: quantumdatalytica.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dqpoc-service
            port:
              number: 80


# ##################################################################
# RUN COMMAND
# kubectl apply -f complete-static-website-kube-file.yaml
# After apply above file, run "kubectl get ingress" and wait for ADDRESS IP Assigned
# NAME                     CLASS   HOSTS                   ADDRESS        PORTS   AGE
# static-website-ingress   nginx   my-capstone-project.com 192.168.64.3   80      10m
# After IP Assigned, run "sudo vim /etc/hosts" to assign this IP to any domain name
# Add line in hosts file, like
# 192.168.64.3    my-capstone-project.com
# And, then save and quite from hosts file and browse above domain name
# ##################################################################
