sharedvolumeRW.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: host-volume-service
spec:
  selector:
    app: reader-job
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-volume-ingress
spec:
  rules:
  - host: my-host-volume-rw.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: host-volume-service
            port:
              number: 80
